--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 
 	// MySQL
 	implementation 'mysql:mysql-connector-java:8.0.28'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	// JPA 설정
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
